[tool.poetry]
name = "hackathon-test"
version = "0.1.0"
description = "This is an hour hackathon test"
authors = ["Nwaru Chidubem Theresa <tessychidubem@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
httpx = "^0.27.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-func-cov = "^0.2.3"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
